[package]
name = "luxtensor-zkvm"
version = "0.4.0"
edition = "2021"
description = "Zero-Knowledge Virtual Machine integration for LuxTensor blockchain"
authors = ["LuxTensor Team"]
license = "MIT"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Internal dependencies
luxtensor-core = { path = "../luxtensor-core" }
luxtensor-crypto = { path = "../luxtensor-crypto" }

# Error handling
thiserror = "1.0"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

# Logging
tracing = "0.1"

# Utils
hex = "0.4"
num_cpus = "1.16"
parking_lot = "0.12"

# RISC Zero zkVM (optional — requires risc0 toolchain)
risc0-zkvm = { version = "3.0", optional = true, default-features = false, features = ["prove", "client"] }

# Methods crate for guest ELF embedding (optional)
luxtensor-methods = { path = "../luxtensor-methods", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[features]
default = []
# Enable development mode (allows dev proofs without real ZK verification).
# MUST NOT be enabled in production builds.
dev = []
# Enable when RISC Zero toolchain is installed.
# This activates real STARK proof generation using risc0-zkvm.
risc0 = ["dep:risc0-zkvm", "dep:luxtensor-methods"]
cuda = ["risc0", "risc0-zkvm?/cuda"]
metal = ["risc0", "risc0-zkvm?/metal"]
groth16 = ["risc0"]
