[package]
name = "luxtensor-zkvm"
# Independent versioning: zkvm follows its own release cycle because it depends
# on the RISC Zero toolchain which has its own compatibility matrix.
version = "0.4.0"
edition.workspace = true
description = "Zero-Knowledge Virtual Machine integration for LuxTensor blockchain"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
bincode = { workspace = true }

# Internal dependencies
luxtensor-core = { path = "../luxtensor-core" }
luxtensor-crypto = { path = "../luxtensor-crypto" }

# Error handling
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }

# Utils
hex = { workspace = true }
num_cpus = "1.16"
parking_lot = { workspace = true }

# RISC Zero zkVM (optional — requires risc0 toolchain)
risc0-zkvm = { version = "3.0", optional = true, default-features = false, features = ["prove", "client"] }

# Methods crate for guest ELF embedding (optional)
luxtensor-methods = { path = "../luxtensor-methods", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[features]
default = []
# Enable development mode (allows dev proofs without real ZK verification).
# MUST NOT be enabled in production builds.
dev = []
# Enable when RISC Zero toolchain is installed.
# This activates real STARK proof generation using risc0-zkvm.
risc0 = ["dep:risc0-zkvm", "dep:luxtensor-methods"]
cuda = ["risc0", "risc0-zkvm?/cuda"]
metal = ["risc0", "risc0-zkvm?/metal"]
groth16 = ["risc0"]
